[gd_scene load_steps=6 format=2]

[ext_resource path="res://rect1524.png" type="Texture2D" id=1]
[ext_resource path="res://Soldier.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.5

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 15, 50 )

[node name="Soldier" type="CharacterBody2D" groups=["soldier"]]
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 1.19209e-07 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )
offset = Vector2( 0, -45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D2" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, -50 )
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2( 0, 0 )
collision_mask = 2
collide_with_areas = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
